--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,8 @@
         "php": "^8.2",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
+        "php-flasher/flasher-toastr-laravel": "^2.0",
+        "php-flasher/flasher-toastr-symfony": "^2.0",
         "spatie/laravel-permission": "^6.9"
     },
     "require-dev": {
