I am doing this project manage and now I am doing this to update profile and create new project

--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "laravel/framework": "^11.9",
+        "laravel/framework": "^11.16",
         "laravel/tinker": "^2.9",
+        "php-flasher/flasher-toastr-laravel": "^2.0",
+        "php-flasher/flasher-toastr-symfony": "^2.0",
         "spatie/laravel-permission": "^6.9"
     },
     "require-dev": {
